# BDPT

./: .gitignore  CMakeCache.txt  CMakeLists.txt  IWasOnMahaElGarfsPerceptualStudy.iPromise  Makefile  README.md  README.txt  SecondLab  TestModel.h  bidirectional.md  cmake_install.cmake  skeleton.cpp  utility.h
code/: BDPT  CMakeLists.txt  TestModel.h  skeleton.cpp  utility.h
